# solana-megadashboard

./: .gitignore  INSTRUCTIONS.txt
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  shell.nix
backend/app/: main.py
backend/app/agents/: __init__.py  agent_manager.py  pattern_detector.py  risk_analyzer.py  volume_analyzer.py  whale_tracker.py
backend/app/api/routes/: enhancements.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agents.py  blockchain.py  price.py  wallets.py
backend/app/core/: auth.py  cache.py  config.py
backend/app/services/: blockchain_indexer.py  data_aggregator.py  price_service.py  pyth_service.py
backend/scripts/: test_websocket.py
backend/tests/: README.md  conftest.py  test_services.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/swap/: page.tsx
frontend/src/app/privacy-policy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: ChatButton.tsx  OrderForm.tsx  PositionManager.tsx  SwapComponent.tsx  TradingViewChart.tsx
frontend/src/components/dashboard/: NetworkStats.tsx  TrendingTokens.tsx  WhaleActivity.tsx
frontend/src/components/icons/: DiscordIcon.tsx
frontend/src/components/layout/: Footer.tsx  Sidebar.tsx  header.tsx
frontend/src/components/preview/: FeaturesSection.tsx  HeroSection.tsx  UpdatesSection.tsx
frontend/src/components/ui/: select.tsx  switch.tsx  tabs.tsx
frontend/src/providers/: WalletProvider.tsx
(+1 files in other folders)
