[tool.poetry]
name = "solana-analytics"
version = "0.1.0"
description = "A comprehensive analytics platform for Solana blockchain data."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pydantic = "^2.4.2"
pydantic-settings = "^2.0.0"
supabase = "^2.9.1"
redis = "^5.0.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.6"
httpx = "^0.26.0"
aiohttp = "^3.8.5"
python-dotenv = "^1.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
sentry-sdk = "^1.39.1"
stripe = "^7.0.0"
pycoingecko = "^3.1.0"
pythclient = "^0.1.4"
redis = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
